--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ ratatui = "0.26"
 crossterm = "0.27"
 reqwest = { version = "0.11", features = ["json"] }
 toml = "0.8"
+clap = { version = "4.5.41", features = ["derive"] }
