--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ crossterm = "0.27"
 reqwest = { version = "0.11", features = ["json"] }
 toml = "0.8"
 clap = { version = "4.5.41", features = ["derive"] }
+async-trait = "0.1"
