--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ reqwest = { version = "0.11", features = ["json"] }
 toml = "0.8"
 clap = { version = "4.5.41", features = ["derive"] }
 async-trait = "0.1"
+sha2 = "0.10"
+hex = "0.4"
