--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 glob = "0.3"
-home = "0.5"
 lazy_static = "1.4"
 itertools = "0.13"
 chrono = "0.4"
@@ -26,5 +25,6 @@ reqwest = { version = "0.11", features = ["json"] }
 toml = "0.8"
 clap = { version = "4.5.41", features = ["derive"] }
 async-trait = "0.1"
+notify = "6.1"
 sha2 = "0.10"
 hex = "0.4"
