--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,28 +3,29 @@ name = "splitrail"
 version = "0.1.0"
 edition = "2024"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
 glob = "0.3"
 lazy_static = "1.4"
-itertools = "0.13"
 chrono = "0.4"
-chrono-tz = "0.9"
-colored = "2.0"
 tokio = { version = "1", features = ["full"] }
 rayon = "1.8"
-dashmap = "5.5"
 num-format = "0.4"
 ratatui = "0.29"
 crossterm = "0.29"
-reqwest = { version = "0.11", features = ["json"] }
-toml = "0.8"
-clap = { version = "4.5.41", features = ["derive"] }
+toml = "0.9.2"
 async-trait = "0.1"
-notify = "6.1"
+notify = "8.1"
+notify-types = "2.0"
 sha2 = "0.10"
 hex = "0.4"
+
+[dependencies.clap]
+version = "4.5.41"
+features = ["derive"]
+
+[dependencies.reqwest]
+version = "0.12.22"
+features = ["json"]
