--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "splitrail"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
+authors = ["Piebald, LLC <support@piebald.ai>"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -28,4 +30,5 @@ features = ["derive"]
 
 [dependencies.reqwest]
 version = "0.12.22"
-features = ["json"]
+default-features = false
+features = ["json", "rustls-tls"]
