--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,6 @@ features = ["derive"]
 version = "0.12.22"
 default-features = false
 features = ["rustls-tls"]
+
+[dev-dependencies]
+tempfile = "3.0"
