Install `cargo-audit` using `taiki-e/install-action`

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -80,5 +80,6 @@ jobs:
         with:
           toolchain: nightly
           components: rustc-codegen-cranelift-preview
-      - run: cargo install cargo-audit --locked
+      - name: Install `cargo-audit`
+        uses: taiki-e/install-action@cargo-audit
       - run: cargo audit
