--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ rayon = "1.8"
 num-format = "0.4"
 ratatui = "0.29"
 crossterm = "0.29"
+serde_json = "1.0"
 toml = "0.9.2"
 async-trait = "0.1"
 notify = "8.1"
