--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,10 @@ serde_bytes = "0.11.17"
 simd-json = { version = "0.15.1", features = ["serde"] }
 tiktoken-rs = "0.6"
 
+# MCP server support
+rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io"] }
+schemars = "1.0"
+
 [dependencies.clap]
 version = "4.5.41"
 features = ["derive"]
