--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,13 @@ authors = ["Piebald LLC <support@piebald.ai>"]
 serde = { version = "1.0.219", features = ["derive"] }
 anyhow = "1.0"
 glob = "0.3"
+jwalk = "0.8"
+xxhash-rust = { version = "0.8", features = ["xxh3"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 rayon = "1.8"
+futures = "0.3"
+dashmap = "6"
 num-format = "0.4"
 ratatui = "0.29"
 crossterm = "0.29"
@@ -25,6 +29,13 @@ phf = { version = "0.12.1", features = ["macros"] }
 serde_bytes = "0.11.17"
 simd-json = { version = "0.15.1", features = ["serde"] }
 tiktoken-rs = "0.6"
+parking_lot = "0.12"
+bincode = "1.3"
+dirs = "6.0"
+chrono-tz = "0.10"
+# Zero-copy cache
+rkyv = "0.8"
+memmap2 = "0.9"
 
 # MCP server support
 rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io"] }
