--- a/vscode-splitrail/package.json
+++ b/vscode-splitrail/package.json
@@ -3,8 +3,8 @@
   "displayName": "Splitrail",
   "description": "Track AI coding tool usage, costs, and tokens across Claude Code, Codex CLI, Gemini CLI, GitHub Copilot, and more.",
   "version": "0.1.0",
-  "publisher": "piebald-llc",
-  "icon": "resources/icon.png",
+  "publisher": "piebald",
+  "icon": "resources/splitrail.png",
   "license": "MIT",
   "repository": {
     "type": "git",
