feat(analyzers): add Pi Agent usage tracker support
Add comprehensive analyzer for Pi Agent CLI tool that parses JSONL
session files from ~/.pi/agent/sessions/ directory.

Features:
- Parse session headers, messages, and model changes
- Extract token usage and cost data from assistant messages
- Track tool calls (read, edit, write, bash, glob, grep)
- Support delta parsing for incremental file updates
- Extract session names from first user message

Includes full test coverage and updates to documentation and
release workflow to reflect Pi Agent support.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -382,7 +382,7 @@ jobs:
           Architecture: ${DPKG_ARCH}
           Provides: ${{ needs.crate_metadata.outputs.name }}
           Conflicts: ${DPKG_CONFLICTS}
-          Description: Blazing fast, single-executable, cross-platform, agentic development monitor.  Supports Claude Code / Codex CLI / Gemini CLI / Qwen Code / Cline / Roo Code / Kilo Code / GitHub Copilot / OpenCode, and integrates with Splitrail Cloud.
+          Description: Blazing fast, single-executable, cross-platform, agentic development monitor.  Supports Claude Code / Codex CLI / Gemini CLI / Qwen Code / Cline / Roo Code / Kilo Code / GitHub Copilot / OpenCode / Pi Agent, and integrates with Splitrail Cloud.
           EOF
 
           DPKG_PATH="${DPKG_STAGING}/${DPKG_NAME}"
