feat(vscode): add Pi Agent file watcher and improve marketplace metadata
- Add ~/.pi/agent/sessions to file watcher for live updates
- Expand description with all supported tools and features
- Add ccusage as alternative in description
- Update model list to reflect actual supported models
- Expand keywords from 9 to 60+ for better discoverability
- Bump version to 0.1.1

--- a/vscode-splitrail/package.json
+++ b/vscode-splitrail/package.json
@@ -1,8 +1,8 @@
 {
   "name": "splitrail-vscode",
   "displayName": "Splitrail",
-  "description": "Track AI coding tool usage, costs, and tokens across Claude Code, Codex CLI, Gemini CLI, GitHub Copilot, and more.",
-  "version": "0.1.0",
+  "description": "Track AI coding assistant usage, costs, and tokens in real-time. A powerful alternative to ccusage with support for multiple tools. Monitors Claude Code, GitHub Copilot, Cline, Roo Code, Kilo Code, Codex CLI, Gemini CLI, Pi Agent, OpenCode, and Qwen Code. Features include: real-time cost tracking, token consumption analytics, per-model breakdowns, daily/weekly/monthly usage reports, file operation stats, tool call tracking, and a unified dashboard for all your AI coding assistants. See exactly how much you're spending on AI coding tools, which models consume the most tokens, and how your usage changes over time. Works with Claude Opus 4.5, Claude Opus 4.1, Claude Sonnet 4.5, Claude Sonnet 4, Claude 3.7 Sonnet, Claude 3.5 Sonnet, Claude 3.5 Haiku, Claude Haiku 4.5, GPT-5.1, GPT-5, GPT-4.1, GPT-4o, o4-mini, o3, o3-pro, o3-mini, o1, o1-pro, Codex, Gemini 3 Pro, Gemini 2.5 Pro, Gemini 2.5 Flash, Gemini 2.0 Flash, Gemini 1.5 Pro, and more.",
+  "version": "0.1.1",
   "publisher": "piebald",
   "icon": "resources/splitrail.png",
   "license": "MIT",
@@ -23,14 +23,80 @@
   ],
   "keywords": [
     "ai",
-    "claude",
-    "copilot",
-    "gemini",
-    "codex",
-    "tokens",
-    "cost",
+    "ai assistant",
+    "ai coding",
+    "ai tools",
+    "agentic",
     "analytics",
-    "usage"
+    "anthropic",
+    "api usage",
+    "billing",
+    "ccusage",
+    "claude",
+    "claude code",
+    "claude 4",
+    "claude 4.5",
+    "claude 3.7",
+    "claude 3.5",
+    "claude opus",
+    "claude sonnet",
+    "claude haiku",
+    "cline",
+    "codex",
+    "codex cli",
+    "copilot",
+    "copilot chat",
+    "cost",
+    "cost tracking",
+    "dashboard",
+    "gemini",
+    "gemini 3",
+    "gemini 2.5",
+    "gemini 2.0",
+    "gemini 1.5",
+    "gemini cli",
+    "gemini flash",
+    "gemini pro",
+    "github copilot",
+    "google",
+    "gpt",
+    "gpt-4",
+    "gpt-4.1",
+    "gpt-4o",
+    "gpt-5",
+    "gpt-5.1",
+    "codex",
+    "o1",
+    "o1-pro",
+    "o3",
+    "o3-pro",
+    "o3-mini",
+    "o4-mini",
+    "kilo code",
+    "llm",
+    "llm usage",
+    "metrics",
+    "monitor",
+    "monitoring",
+    "openai",
+    "opencode",
+    "pi agent",
+    "qwen",
+    "qwen code",
+    "roo code",
+    "spending",
+    "stats",
+    "statistics",
+    "token",
+    "token counter",
+    "token tracking",
+    "tokens",
+    "tracking",
+    "usage",
+    "usage tracker",
+    "vibe coding",
+    "windsurf",
+    "cursor"
   ],
   "activationEvents": [
     "onCommand:splitrail.openDashboard",
