--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ parking_lot = "0.12"
 bincode = "1.3"
 dirs = "6.0"
 chrono-tz = "0.10"
+iana-time-zone = "0.1"
 
 # MCP server support
 rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io"] }
