--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,14 @@ edition = "2024"
 license = "MIT"
 authors = ["Piebald LLC <support@piebald.ai>"]
 
+[features]
+default = ["mimalloc"]
+# Use mimalloc allocator for reduced memory usage. Disable for heaptrack profiling:
+#   cargo build --no-default-features
+mimalloc = ["dep:mimalloc"]
+
 [dependencies]
+mimalloc = { version = "0.1.48", default-features = false, features = ["v3"], optional = true }
 serde = { version = "1.0.228", features = ["derive"] }
 anyhow = "1.0"
 glob = "0.3"
