--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ xxhash-rust = { version = "0.8", features = ["xxh3"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 rayon = "1.11"
+lasso = { version = "0.7", features = ["multi-threaded"] }
 futures = "0.3"
 dashmap = "6"
 num-format = "0.4"
