--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,10 @@ mimalloc = { version = "0.1.48", default-features = false, features = ["v3"], op
 serde = { version = "1.0.228", features = ["derive"] }
 anyhow = "1.0"
 glob = "0.3"
-jwalk = "0.8"
+walkdir = "2"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
-rayon = "1.11"
 lasso = { version = "0.7", features = ["multi-threaded"] }
 futures = "0.3"
 dashmap = "6"
