--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,11 @@ authors = ["Piebald LLC <support@piebald.ai>"]
 default = ["mimalloc"]
 # Use mimalloc allocator for reduced memory usage. Disable for heaptrack profiling:
 #   cargo build --no-default-features
-mimalloc = ["dep:mimalloc"]
+mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
 
 [dependencies]
 mimalloc = { version = "0.1.48", default-features = false, features = ["v3"], optional = true }
+libmimalloc-sys = { version = "0.1.44", features = ["extended"], optional = true }
 serde = { version = "1.0.228", features = ["derive"] }
 anyhow = "1.0"
 glob = "0.3"
