Optimize SingleMessageContribution from 40 to 32 bytes
Use c2rust-bitfields to pack stats and date into a 176-bit bitfield,
achieving cache-aligned 32-byte struct size. Removes CompactMessageStats
in favor of PackedStatsDate with compile-time size assertion.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ simd-json = { version = "0.17.0", features = ["serde"] }
 tiktoken-rs = "0.9.1"
 parking_lot = "0.12"
 tinyvec = { version = "1.8", features = ["alloc"] }
+c2rust-bitfields = "0.18"
 bincode = "2.0.1"
 dirs = "6.0"
 chrono-tz = "0.10"
