--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,49 +5,60 @@ edition = "2024"
 license = "MIT"
 authors = ["Piebald LLC <support@piebald.ai>"]
 
+[features]
+default = ["mimalloc"]
+# Use mimalloc allocator for reduced memory usage. Disable for heaptrack profiling:
+#   cargo build --no-default-features
+mimalloc = ["dep:mimalloc", "dep:libmimalloc-sys"]
+
 [dependencies]
-serde = { version = "1.0.219", features = ["derive"] }
+mimalloc = { version = "0.1.48", default-features = false, features = ["v3"], optional = true }
+libmimalloc-sys = { version = "0.1.44", features = ["extended"], optional = true }
+serde = { version = "1.0.228", features = ["derive"] }
 anyhow = "1.0"
 glob = "0.3"
-jwalk = "0.8"
+walkdir = "2"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
-rayon = "1.8"
+lasso = { version = "0.7", features = ["multi-threaded"] }
 futures = "0.3"
+rayon = "1.10"
 dashmap = "6"
 num-format = "0.4"
-ratatui = "0.29"
+ratatui = "0.30.0"
 crossterm = "0.29"
 
-toml = "0.9.2"
+toml = "0.9.10"
 async-trait = "0.1"
-notify = "8.1"
+notify = "8.2"
 notify-types = "2.0"
 sha2 = "0.10"
-phf = { version = "0.12.1", features = ["macros"] }
-serde_bytes = "0.11.17"
-simd-json = { version = "0.15.1", features = ["serde"] }
-tiktoken-rs = "0.6"
+phf = { version = "0.13.1", features = ["macros"] }
+serde_bytes = "0.11.19"
+simd-json = { version = "0.17.0", features = ["serde"] }
+tiktoken-rs = "0.9.1"
 parking_lot = "0.12"
-bincode = "1.3"
+tinyvec = { version = "1.8", features = ["alloc"] }
+c2rust-bitfields = "0.18"
+bincode = "2.0.1"
 dirs = "6.0"
 chrono-tz = "0.10"
-rusqlite = { version = "0.35", features = ["bundled"] }
+rusqlite = { version = "0.38.0", features = ["bundled"] }
 iana-time-zone = "0.1"
 
 # MCP server support
-rmcp = { version = "0.9.1", features = ["server", "macros", "transport-io"] }
-schemars = "1.0"
+rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io"] }
+schemars = "1.2"
 
 [dependencies.clap]
-version = "4.5.41"
+version = "4.5.53"
 features = ["derive"]
 
 [dependencies.reqwest]
-version = "0.12.22"
+version = "0.13.1"
 default-features = false
-features = ["rustls-tls"]
+features = ["rustls"]
 
 [dev-dependencies]
-tempfile = "3.0"
+tempfile = "3.24"
